<resources>
    <string name="app_name">Score Keeper</string>

    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>

    <string name="zero_points">0</string>
    <string name="total_faults">FAULTS</string>
    <string name="total_cards">CARDS</string>

    <string name="add_goal">Add Goal</string>
    <string name="add_fault">Add Fault</string>
    <string name="add_card">Add Card</string>

    <string name="reset">Reset</string>
</resources>
